--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,42 @@
   "action": {
     "default_popup": "popup.html"
   },
-  "permissions": []
+  "background": {
+    "service_worker": "scripts/background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "*://mail.google.com/*",
+        "*://outlook.live.com/*",
+        "*://outlook.office.com/*", 
+        "*://outlook.office365.com/*",
+        "*://mail.yahoo.com/*"
+      ],
+      "js": ["scripts/email-content-script.js"],
+      "run_at": "document_idle"
+    },
+    {
+      "matches": ["<all_urls>"],
+      "exclude_matches": [
+        "*://chrome.google.com/*",
+        "*://chromewebstore.google.com/*",
+        "https://chrome.google.com/*",
+        "https://*.google.com/webstore/*"
+      ],
+      "js": ["scripts/url-scanner-content.js"],
+      "run_at": "document_idle"
+    }
+  ],
+  "permissions": [
+    "storage",
+    "activeTab"
+  ],
+  "host_permissions": [
+    "*://mail.google.com/*",
+    "*://outlook.live.com/*",
+    "*://outlook.office.com/*",
+    "*://outlook.office365.com/*",
+    "*://mail.yahoo.com/*"
+  ]
 } 
