--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ var/
 # Model files
 backend/malicious_url_model/url_classifier_model.pkl
 backend/malicious_url_model/feature_names.pkl
+backend/.env
